[gd_scene load_steps=42 format=2]

[ext_resource path="res://Furniture/Assets/fridge-open-wide.png" type="Texture" id=1]
[ext_resource path="res://Furniture/Assets/table.png" type="Texture" id=2]
[ext_resource path="res://Characters/Player2.png" type="Texture" id=3]
[ext_resource path="res://Interactions/FridgeMinigame/Player.gd" type="Script" id=4]
[ext_resource path="res://Interactions/FridgeMinigame/Platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interactions/FridgeMinigame/FridgeMinigame.gd" type="Script" id=6]
[ext_resource path="res://World/pizza_slice.png" type="Texture" id=7]
[ext_resource path="res://Furniture/Assets/baby-bottle.png" type="Texture" id=8]
[ext_resource path="res://SFX/pop.ogg" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.04774, 14.5481 )

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=6]
blend_point_0/node = SubResource( 2 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 3 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 4 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 5 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "WalkLeft"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "WalkRight"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=11]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 10 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachine" id=14]
states/Idle/node = SubResource( 6 )
states/Idle/position = Vector2( 516, 149 )
states/Walk/node = SubResource( 11 )
states/Walk/position = Vector2( 688, 149 )
transitions = [ "Idle", "Walk", SubResource( 12 ), "Walk", "Idle", SubResource( 13 ) ]
start_node = "Idle"
graph_offset = Vector2( -112, 52 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[sub_resource type="Animation" id=16]
resource_name = "IdleDown"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 14 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "IdleLeft"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "IdleRight"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "IdleUp"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 14 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 11, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ) ]
}

[sub_resource type="Animation" id=23]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Player Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/ActionArea/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 224.25, 9 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 8, 110.25 )

[sub_resource type="CircleShape2D" id=26]

[sub_resource type="Gradient" id=28]
colors = PoolColorArray( 0.46875, 0.46875, 0.46875, 1, 0.964844, 0.0640717, 0.317414, 1 )

[sub_resource type="GradientTexture" id=29]
gradient = SubResource( 28 )

[sub_resource type="ParticlesMaterial" id=30]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 45.97
initial_velocity_random = 0.63
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 29 )

[sub_resource type="Animation" id=31]
resource_name = "Win"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../PickupAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=32]
resource_name = "Win"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../PickupAudio:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=27]
resource_name = "New Anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BabyBottle:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pizza:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="FridgeMinigame" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Table" type="Sprite" parent="."]
scale = Vector2( 7.82321, 4.8596 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8.39717, -65.0533 )
scale = Vector2( 4.26669, 4.26669 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -4.49492, -104.507 )
current = true

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( -28.5764, -171.4 )

[node name="Platform" parent="Spawn" instance=ExtResource( 5 )]
position = Vector2( -90.0528, 164.577 )

[node name="Platform2" parent="Spawn" instance=ExtResource( 5 )]
position = Vector2( -20.3713, 120.342 )

[node name="Platform3" parent="Spawn" instance=ExtResource( 5 )]
position = Vector2( 97.7438, 153.666 )

[node name="Platform4" parent="Spawn" instance=ExtResource( 5 )]
position = Vector2( 76.7438, 71.9163 )

[node name="Platform5" parent="Spawn" instance=ExtResource( 5 )]
position = Vector2( -87.5065, 67.1665 )

[node name="Platform6" parent="Spawn" instance=ExtResource( 5 )]
position = Vector2( 8.24379, 30.4165 )

[node name="Player" type="KinematicBody2D" parent="." groups=[
"fridge-player",
]]
position = Vector2( -168.924, 20.0978 )
collision_layer = 64
collision_mask = 64
script = ExtResource( 4 )

[node name="Player Sprite" type="Sprite" parent="Player"]
position = Vector2( -0.264862, -16.1581 )
texture = ExtResource( 3 )
hframes = 16
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -0.19149, -14.6467 )
shape = SubResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="Player"]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 15 )
parameters/Idle/blend_position = Vector2( 0.00312173, 0.181503 )
parameters/Walk/blend_position = Vector2( -0.0457857, -0.70578 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/IdleDown = SubResource( 16 )
anims/IdleLeft = SubResource( 17 )
anims/IdleRight = SubResource( 18 )
anims/IdleUp = SubResource( 19 )
anims/WalkDown = SubResource( 20 )
anims/WalkLeft = SubResource( 21 )
anims/WalkRight = SubResource( 22 )
anims/WalkUp = SubResource( 23 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -3.5, 32 )
shape = SubResource( 24 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -193.045, -80.4949 )
shape = SubResource( 25 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 170.561, -81.2474 )
shape = SubResource( 25 )

[node name="Despawn" type="Position2D" parent="."]
position = Vector2( -28.2437, 19.6219 )

[node name="Pizza" type="Area2D" parent="."]
position = Vector2( -141.516, -147.164 )
collision_layer = 64
collision_mask = 64

[node name="Sprite" type="Sprite" parent="Pizza"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pizza"]
visible = false
shape = SubResource( 26 )

[node name="Particles2D" type="Particles2D" parent="Pizza"]
emitting = false
amount = 100
one_shot = true
explosiveness = 0.79
randomness = 0.78
process_material = SubResource( 30 )

[node name="WinAnimation" type="AnimationPlayer" parent="Pizza"]
anims/Win = SubResource( 31 )

[node name="BabyBottle" type="Area2D" parent="."]
position = Vector2( 101.38, -151.921 )
collision_layer = 64
collision_mask = 64

[node name="Sprite" type="Sprite" parent="BabyBottle"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BabyBottle"]
visible = false
shape = SubResource( 26 )

[node name="Particles2D" type="Particles2D" parent="BabyBottle"]
scale = Vector2( 1.03578, 1.03578 )
emitting = false
amount = 100
one_shot = true
explosiveness = 0.79
randomness = 0.78
process_material = SubResource( 30 )

[node name="WinAnimation" type="AnimationPlayer" parent="BabyBottle"]
anims/Win = SubResource( 32 )

[node name="PickupAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 27 )
[connection signal="animation_finished" from="Player/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Pizza" to="." method="_on_Pizza_body_entered"]
[connection signal="animation_finished" from="Pizza/WinAnimation" to="." method="_on_Pizza_WinAnimation_animation_finished"]
[connection signal="body_entered" from="BabyBottle" to="." method="_on_BabyBottle_body_entered"]
[connection signal="animation_finished" from="BabyBottle/WinAnimation" to="." method="_on_BabyBottle_WinAnimation_animation_finished"]
